<?xml version="1.0" encoding="UTF-8"?>
<!--
	JBoss, Home of Professional Open Source Copyright 2009, Red Hat
	Middleware LLC, and others contributors as indicated by the @authors
	tag. All rights reserved. See the copyright.txt in the distribution
	for a full listing of individual contributors. This copyrighted
	material is made available to anyone wishing to use, modify, copy, or
	redistribute it subject to the terms and conditions of the GNU Lesser
	General Public License, v. 2.1. This program is distributed in the
	hope that it will be useful, but WITHOUT A WARRANTY; without even the
	implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
	PURPOSE. See the GNU Lesser General Public License for more details.
	You should have received a copy of the GNU Lesser General Public
	License, v.2.1 along with this distribution; if not, write to the Free
	Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
	02110-1301, USA.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <parent>
    <groupId>org.jboss.narayana.rts</groupId>
    <artifactId>rest-tx</artifactId>
    <version>5.0.0.M2-SNAPSHOT</version>
    <relativePath>../pom.xml</relativePath>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>rest-tx-web</artifactId>
  <packaging>war</packaging>
  <name>RESTful Atomic Transactions War Packaging</name>
  <description>Provides Transactions for web applications</description>
  <properties>
    <version.org.jboss.resteasy>2.0.0.GA</version.org.jboss.resteasy>
    <version.artifactId>5.0.0.M2-SNAPSHOT</version.artifactId>
    <artifactId.name>rest-tx</artifactId.name>
    <version.org.jboss.jbossas>6.0.0.20100721-M4</version.org.jboss.jbossas>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.jboss.jbossas</groupId>
        <artifactId>jboss-as-component-matrix</artifactId>
        <version>${version.org.jboss.jbossas}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <!--
		<dependency>
			<groupId>org.jboss.jbossas</groupId>
			<artifactId>jboss-as-depchain</artifactId>
			<version>${version.org.jboss.jbossas}</version>
			<type>pom</type>
		</dependency>
		-->
    <dependency>
      <groupId>org.jboss.narayana.rts</groupId>
      <artifactId>rest-tx-api</artifactId>
      <version>${version.artifactId}</version>
    </dependency>
    <dependency>
      <groupId>org.jboss.narayana.rts</groupId>
      <artifactId>rest-tx-api</artifactId>
      <version>${version.artifactId}</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.narayana.jts</groupId>
      <artifactId>narayana-jts</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>asm</groupId>
      <artifactId>asm-all</artifactId>
      <version>3.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.sun.jersey.jersey-test-framework</groupId>
      <artifactId>jersey-test-framework-grizzly</artifactId>
      <version>1.5</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.resteasy</groupId>
      <artifactId>resteasy-jaxrs</artifactId>
      <version>${version.org.jboss.resteasy}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.resteasy</groupId>
      <artifactId>jaxrs-api</artifactId>
      <version>${version.org.jboss.resteasy}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.resteasy</groupId>
      <artifactId>tjws</artifactId>
      <version>${version.org.jboss.resteasy}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.5</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>create_sources_jar</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <phase>prepare-package</phase>
          </execution>
        </executions>
        <configuration>
          <forceCreation>true</forceCreation>
          <includePom>true</includePom>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <redirectTestOutputToFile>true</redirectTestOutputToFile>
          <trimStackTrace>false</trimStackTrace>
          <printSummary>true</printSummary>
          <includes>
            <include>**/*UnitTest.java</include>
          </includes>
          <forkMode>always</forkMode>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <configuration>
          <archive>
            <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>bust</id>
      <!-- eventually starts but fails because it can't get a JMX connection
			     so the stop goal isn't executed leaving the server running
			     -->
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>jboss-maven-plugin</artifactId>
            <version>1.4.1</version>
            <executions>
              <execution>
                <id>start-container</id>
                <phase>pre-integration-test</phase>
                <goals>
                  <goal>configure</goal>
                  <goal>startAndWait</goal>
                  <goal>deploy</goal>
                </goals>
              </execution>
              <execution>
                <id>stop-container</id>
                <phase>post-integration-test</phase>
                <goals>
                  <goal>undeploy</goal>
                  <goal>stop</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <!--
						<jbossHome>${project.build.directory}/jboss-${version.org.jboss.jbossas}</jbossHome>
						-->
              <jbossHome>${env.JBOSS_HOME}</jbossHome>
              <fileName>${basedir}/target/${artifactId.name}-web-${version.artifactId}.war</fileName>
              <serverName>default</serverName>
              <port>8080</port>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>remote</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>jboss-maven-plugin</artifactId>
            <version>1.3.1</version>
            <configuration>
              <jbossHome>${env.JBOSS_HOME}</jbossHome>
            </configuration>
            <executions>
              <execution>
                <id>jboss-deploy</id>
                <phase>pre-integration-test</phase>
                <goals>
                  <goal>deploy</goal>
                </goals>
                <configuration>
                  <fileName>${basedir}/target/${artifactId.name}-web-${version.artifactId}.war</fileName>
                  <serverName>default</serverName>
                  <skip>false</skip>
                </configuration>
              </execution>
              <execution>
                <id>jboss-undeploy</id>
                <phase>post-integration-test</phase>
                <goals>
                  <goal>undeploy</goal>
                </goals>
                <configuration>
                  <fileName>${basedir}/target/${artifactId.name}-web-${version.artifactId}.war</fileName>
                  <serverName>default</serverName>
                  <skip>false</skip>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <skip>true</skip>
            </configuration>
            <executions>
              <execution>
                <id>surefire-it</id>
                <phase>integration-test</phase>
                <goals>
                  <goal>test</goal>
                </goals>
                <configuration>
                  <redirectTestOutputToFile>true</redirectTestOutputToFile>
                  <trimStackTrace>false</trimStackTrace>
                  <printSummary>true</printSummary>
                  <includes>
                    <include>**/*IntegrationTest.java</include>
                  </includes>
                  <forkMode>always</forkMode>
                  <skip>false</skip>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>embedded</id>
      <activation>
        <!-- TODO cant get this profile to work either - needs more investigation -->
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-surefire-plugin</artifactId>
            <executions>
              <execution>
                <id>integration-test</id>
                <phase>integration-test</phase>
                <goals>
                  <goal>test</goal>
                </goals>
                <configuration>
                  <systemProperties>
                    <property>
                      <name>resttx.war</name>
                      <value>${basedir}/target/${artifactId.name}-web-${version.artifactId}.war</value>
                    </property>
                  </systemProperties>
                  <environmentVariables>
                    <resttx.war>${basedir}/target/${artifactId.name}-web-${version.artifactId}.war</resttx.war>
                  </environmentVariables>
                  <additionalClasspathElements>
                    <additionalClasspathElement>${JBOSS_HOME}/client/jbossws-native-client.jar</additionalClasspathElement>
                    <!--
                                        Because jbossweb.sar contains shared web.xml,
                                        which must be visible from same CL as
                                        TomcatDeployer.class.getClassLoader
                                        -->
                    <additionalClasspathElement>${JBOSS_HOME}/server/default/deploy/jbossweb.sar</additionalClasspathElement>
                  </additionalClasspathElements>
                  <redirectTestOutputToFile>true</redirectTestOutputToFile>
                  <trimStackTrace>false</trimStackTrace>
                  <printSummary>true</printSummary>
                  <includes>
                    <include>**/*IntegrationTest.java</include>
                  </includes>
                  <forkMode>always</forkMode>
                  <!--
                                     MaxPermSize Required to bump the space for relective
                                     data like classes, methods, etc. EMB-41. Endorsed
                                     required for things like WS support (EMB-61)
                                     -->
                  <argLine>-Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true -Djava.endorsed.dirs=${JBOSS_HOME}/lib/endorsed -Djboss.home=${JBOSS_HOME} -Djboss.boot.server.log.dir=${JBOSS_HOME}</argLine>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <!-- Get AS and put into "target" -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <executions>
              <execution>
                <id>unpack</id>
                <phase>pre-integration-test</phase>
                <!-- So run before testing -->
                <goals>
                  <goal>unpack</goal>
                </goals>
                <configuration>
                  <artifactItems>
                    <artifactItem>
                      <groupId>org.jboss.jbossas</groupId>
                      <artifactId>jboss-as-distribution</artifactId>
                      <version>${version.org.jboss.jbossas}</version>
                      <type>zip</type>
                      <overWrite>false</overWrite>
                      <outputDirectory>${project.build.directory}</outputDirectory>
                    </artifactItem>
                  </artifactItems>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
